Bug 1635761 - disable cancel drag animation on macOS for tabs dragged out of the window, r=emilio,mconley

Differential Revision: https://phabricator.services.mozilla.com/D166963